log/build_2024-06-11_15-45-47/adhoc/stderr.log
  File "/home/greatshuhang/ros2_ws/install/adhoc/lib/python3.10/site-packages/adhoc/video_subscriber.py", line 158
    self.audio_frames = [(ad, ts) for ad, ts in self.audio audio_frames if ts > self.last_save_time + self.interval]
                                                           ^^^^^^^^^^^^
SyntaxError: invalid syntax

